--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
 		<div class="dropdown">
 			<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
 				<div class="dropdown-content asset-dropbtn">
-					<a href="#">Drawer 1</a>
-					<a href="#">Drawer 2</a>
+					<!-- <a href="#">Drawer 1</a>
+					<a href="#">Drawer 2</a> -->
 					<a onclick="assetOn()" href="#"><i class="fas fa-upload"></i> Upload</a>
 					<!-- <a onclick="drawerOn()" href="#"><i class="fas fa-plus"></i>  New Drawer</a> -->
 				</div>
@@ -134,7 +134,7 @@
 						</li>
 						<li>
 							<label for="image">Image</label>
-							<input type="file" id="image" width="300" height="250" placeholder="Upload Your Image Here">
+							<input disabled type="file">
 						</li>
 						<li>
 						<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
