added back the simpleUpload file, and updating display functions

--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -133,7 +133,7 @@
 						</li>
 						<li>
 							<label for="image">Image</label>
-							<input disabled type="file">
+							<input type="file" id="image">
 						</li>
 						<li>
 						<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
@@ -162,10 +162,8 @@
 		</div>
 	</section>
 	<main role="main">
-		<div class="tab dropdown-prof">
-		</div>	
-			<div id="dropbtn-prof" class="displayTabcontent">
-			</div>
-		<!-- </div>		   -->
+		<div class="tab dropdown-prof"></div>	
+		<div id="dropbtn-prof"></div>
+		<div id="GsearchResults" class="displayTabcontent"></div>
 	</main>	
 </body>
