--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 						</li>
 						<li>
 							<label for="image">Image</label>
-							<input disabled type="file">
+							<input type="file" id="image">
 						</li>
 						<li>
 						<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
