--- a/public/assets.html
+++ b/public/assets.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="topnav" role="navigation" id="responsivetopnav">
 		<a class="home" href="index.html">Home  <i class="fas fa-home"></i></a>
-		<div class="dropdown">
+		<div id="navAccount" class="dropdown">
 			<a class="dropbtn" href="#account">Account <i class="fas fa-user"></i></a>
 				<div class="dropdown-content">
 					<a href="#"><i class="fas fa-sign-in-alt"></i> Login</a>
@@ -65,7 +65,7 @@
 						<input type="text" id="first-name" placeholder="Enter first name here">
 						</li>
 						<li>
-							<label for="first-name">Last Name</label>
+							<label for="last-name">Last Name</label>
 							<input type="text" id="last-name" placeholder="Enter last name here">
 							</li>
 						<li>
@@ -167,3 +167,4 @@
 		<div id="Drawer1" class="assettabcontent"></div> 
 	</main>
 </body>
+</html>
