--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 			<a onclick="newAccountOn()" href="javascript:void(0)" class="dropbtn" href="#account">Account <i class="fas fa-user"></i></a>
 				<div class="dropdown-content">
 					<a href="#"><i class="fas fa-sign-in-alt"></i> Login</a>
-					<a href="#"><i class="fas fa-edit"></i> Edit Account</a>
-					<a onclick="accountOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> Create Account</a>
+					<a onclick="updateAccountOn()" href="javascript:void(0)"><i class="fas fa-edit"></i> Edit Account</a>
+					<a onclick="updateAccountOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> Create Account</a>
 				</div>
 		</div>
 		<div class="dropdown">
@@ -55,32 +55,28 @@
 			<p>Create profiles for each of your children. Connect to relevant web resources based on your child's age. </br> Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
 		</header>
 	</div>
-	<!-- <section role="region">
-			<div id="new-account-overlay">
-				<div class="Account" id="AccountInfo">
-					<form class="account-info-form">
-						<ul class="flex-outer">
-							<p class="form-title">Account Info</p>
-							<li>
-							<label for="first-name">First Name</label>
-							<input type="text" id="first-name" placeholder="Enter first name here">
-							</li>
-							<li>
-								<label for="last-name">Last Name</label>
-								<input type="text" id="last-name" placeholder="Enter last name here">
-								</li>
-							<li>
-							<label for="account-email">email</label>
-							<input type="text" class="email" id="account-email" placeholder="Enter email here">
-							</li>
-							<li>
-							<button id="account-info-overlaybutton" type="submit" onclick="newAccountOff()">Create Account</button>
-							</li>
-						</ul>
-					</form>
-				</div>
+	<section role="region">
+		<div id="login">
+			<div class="loginHere" id="loginForm">
+				<form class="login-form">
+					<ul class="flex-outer">
+						<p class="form-title">Login</p>
+						<li>
+							<label for="user-name">Username</label>
+							<input type="text" id="user-name" placeholder="Enter desired username">
+						</li>
+						<li>
+							<label for="password">Password</label>
+							<input type="text" id="password" placeholder="min 10 characters, letters and numbers">
+						</li>
+						<li>
+							<button id="login" type="submit" onclick="loginOff()">Login</button>
+						</li>
+					</ul>
+				</form>
 			</div>
-	</section> -->
+		</div>
+	</section>
 	<section role="region">
 		<div id="accountoverlay">
 			<div class="addAccount" id="addAccountForm">
@@ -88,8 +84,16 @@
 					<ul class="flex-outer">
 						<p class="form-title">Create New Account</p>
 						<li>
-						<label for="first-name">First Name</label>
-						<input type="text" id="first-name" placeholder="Enter first name here">
+							<label for="user-name">Username</label>
+							<input type="text" id="user-name" placeholder="Enter desired username">
+						</li>
+						<li>
+							<label for="password">Password</label>
+							<input type="text" id="password" placeholder="min 10 characters, letters and numbers">
+						</li>
+						<li>
+							<label for="first-name">First Name</label>
+							<input type="text" id="first-name" placeholder="Enter first name here">
 						</li>
 						<li>
 							<label for="last-name">Last Name</label>
@@ -101,6 +105,40 @@
 						</li>
 						<li>
 						<button id="accountoverlaybutton" type="submit" onclick="accountOff()">Create Account</button>
+						</li>
+					</ul>
+				</form>
+			</div>
+		</div>
+	</section>
+	<section role="region">
+		<div id="update-accountoverlay">
+			<div class="updateAccount" id="updateAccountForm">
+				<form class="update-account-form">
+					<ul class="flex-outer">
+						<p class="form-title">Update Account Information</p>
+						<li>
+							<label for="user-name">Username</label>
+							<input type="text" id="user-name" placeholder="Enter desired username">
+						</li>
+						<li>
+							<label for="password">Password</label>
+							<input type="text" id="password" placeholder="min 10 characters, letters and numbers">
+						</li>
+						<li>
+							<label for="first-name">First Name</label>
+							<input type="text" id="first-name" placeholder="Enter first name here">
+						</li>
+						<li>
+							<label for="last-name">Last Name</label>
+							<input type="text" id="last-name" placeholder="Enter last name here">
+						</li>
+						<li>
+							<label for="account-email">email</label>
+							<input type="text" class="email" id="account-email" placeholder="Enter email here">
+						</li>
+						<li>
+							<button id="update-accountoverlaybutton" type="submit" onclick="accountOff()">Update Account</button>
 						</li>
 					</ul>
 				</form>
