updated styles and added edit and delete icons to individual assets

--- a/public/assets.html
+++ b/public/assets.html
@@ -46,9 +46,13 @@
 	<div id="header">
 		<header role="banner">
 			<h1>JusKidin</h1>
+			<div class="intro">
 			<h2>Drawers</h2>
+			<h3>Each drawer is an organizational topic. </br> Place related connected photos in the appropriate drawer.</h3>
+			</div>
 		</header>
 	</div>
+	
 	<section role="region">
 		<div id="loginoverlay">
 			<div class="loginHere" id="loginForm">
