--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -46,7 +46,8 @@
 	<div id="header">
 		<header role="banner">
 			<h1>JusKidin</h1>
-			<h2 class="web-resource">Web Resource Links</h2>
+			<h2>Child Development Resources</h2>
+			<h3>Discover current and relevant information, taylored for each child.</h3>
 		</header>
 	</div>
 	<section role="region">
