--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -22,6 +22,7 @@
 					<a onclick="loginOn()" href="javascript:void(0)"><i class="fas fa-sign-in-alt"></i> Login</a>
 					<a onclick="updateAccountOn()" href="javascript:void(0)"><i class="fas fa-edit"></i> Edit Account</a>
 					<a onclick="accountOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> Create Account</a>
+					<a onclick="deleteOn()" href="javascript:void(0)"><i class="fas fa-trash"></i> Delete Account</a>
 				</div>
 		</div>
 		<div class="dropdown">
@@ -46,10 +47,26 @@
 	<div id="header">
 		<header role="banner">
 			<h1>JusKidin</h1>
-			<h2>Child Development Resources</h2>
-			<h3>Discover current and relevant information, taylored for each child.</h3>
+			<h2>Discover relevant child development resources for each child.</h2>
 		</header>
 	</div>
+	<section role="region">
+		<div id="deleteoverlay">
+			<div class="delete" id="deleteForm">
+				<form>
+					<ul class="flex-outer">
+						<p class="form-title">Are you sure?</p>
+						<li>
+							<label for="delete-name" id="delete-name">This action can not be undone.</label>
+						</li>
+						<li>
+							<button id="delete-overlaybutton" type="submit" onclick="deleteOff()">Delete Forever</button>
+						</li>
+					</ul>
+				</form>
+			</div>
+		</div>
+	</section>
 	<section role="region">
 		<div id="loginoverlay">
 			<div class="loginHere" id="loginForm">
@@ -99,7 +116,7 @@
 							<input type="text" class="email" id="account-email" placeholder="Enter email here">
 						</li>
 						<li>
-							<button id="update-accountoverlaybutton" type="submit" onclick="accountOff()">Update Account</button>
+							<button id="update-accountoverlaybutton" type="submit" onclick="updateAccountOff()">Update Account</button>
 						</li>
 					</ul>
 				</form>
@@ -179,8 +196,8 @@
 						<li>
 							<label for="new-drawer-title">Add To Drawer</label>
 							<select name="current-drawer-titles" class="new-drawer-title">
-								<option value=`${drawerTitle}`>Drawer 1</option>
-								<option value=`${drawerTitle}`>Drawer 2</option>
+								<!-- <option value=`${drawerTitle}`>Drawer 1</option>
+								<option value=`${drawerTitle}`>Drawer 2</option> -->
 							</select>
 						</li>
 						<li>
