--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,14 @@
 					<ul class="flex-outer">
 						<p class="form-title">Create New Account</p>
 						<li>
+							<label for="user-name">Username</label>
+							<input type="text" id="user-name" placeholder="select a username here">
+						</li>
+						<li>
+							<label for="password">Password</label>
+							<input type="text" id="password" placeholder="at least 10 characters...">
+						</li>
+						<li>
 						<label for="first-name">First Name</label>
 						<input type="text" id="first-name" placeholder="Enter first name here">
 						</li>
