--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<script src="simpleUpload.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="app.js"></script>
+		<!-- <script type="text/javascript" src="app.js"></script> -->
 		<script type="text/javascript" src="client.js"></script>
 	</head>
 <body>
