moving forward with wiring up

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	<div class="topnav" role="navigation" id="responsivetopnav">
 		<a class="home" href="index.html">Home  <i class="fas fa-home"></i></a>
 		<div id="navAccount" class="dropdown">
-			<a onclick="newAccountOn()" href="javascript:void(0)" class="dropbtn" href="#account">Account <i class="fas fa-user"></i></a>
+			<a id ="navAccountName" onclick="newAccountOn()" href="javascript:void(0)" class="dropbtn" href="#account"> Account <i class="fas fa-user"></i></a>
 				<div class="dropdown-content">
 					<a href="#"><i class="fas fa-sign-in-alt"></i> Login</a>
 					<a href="#"><i class="fas fa-edit"></i> Edit Account</a>
