--- a/public/assets.html
+++ b/public/assets.html
@@ -17,7 +17,7 @@
 	<div class="topnav" role="navigation" id="responsivetopnav">
 		<a class="home" href="index.html">Home  <i class="fas fa-home"></i></a>
 		<div id="navAccount" class="dropdown">
-			<a class="dropbtn" href="#account">Account <i class="fas fa-user"></i></a>
+			<a id ="navAccountName" class="dropbtn" href="#account">Account <i class="fas fa-user"></i></a>
 				<div class="dropdown-content">
 					<a onclick="loginOn()" href="javascript:void(0)"><i class="fas fa-sign-in-alt"></i> Login</a>
 					<a href="#"><i class="fas fa-edit"></i> Edit Account</a>
