--- a/public/assets.html
+++ b/public/assets.html
@@ -35,6 +35,7 @@
 			<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
 				<div class="dropdown-content asset-dropbtn">
 					<a onclick="assetOn()" href="#"><i class="fas fa-link"></i> Connect Images</a>
+					<a onclick="drawerOn()" href="#"><i class="fas fa-plus"></i>  New Drawer</a>
 				</div>
 		</div>
 		<div class="search-container">
@@ -221,10 +222,6 @@
 									<input type="text" id="notes" placeholder="Notes">
 								</li>
 								<li>
-									<label for="drawer-title">Create New Drawer</label>
-									<input type="text" id="drawer-title" placeholder="Drawer Title">
-								</li>
-								<li>
 									<label for="new-drawer-title">Add To Drawer</label>
 									<select name="current-drawer-titles" class="new-drawer-title">
 										<!-- <option value=`${drawerTitle}`>Drawer 1</option>
@@ -254,6 +251,24 @@
 								</li>
 								<li>
 									<button id="delete-overlaybutton" type="submit" onclick="deleteOff()">Delete Forever</button>
+								</li>
+							</ul>
+						</form>
+					</div>
+				</div>
+			</section>
+			<section role="region">
+				<div id="draweroverlay">
+					<div class="addDrawer" id="addDrawerForm">
+						<form class="drawer-age-form">
+							<ul class="flex-outer">
+								<p class="form-title">Create Drawer</p>
+								<li>
+									<label for="drawer-name">Drawer Name</label>
+									<input type="text" id="new-drawer-title" placeholder="Drawer Name">
+								</li>
+								<li>
+									<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
 								</li>
 							</ul>
 						</form>
