--- a/public/assets.html
+++ b/public/assets.html
@@ -52,8 +52,7 @@
 			<h2>Create and use drawers to organize your online photos.</h2>
 			</div>
 		</header>
-	</div>
-	
+	</div>	
 	<section role="region">
 		<div id="loginoverlay">
 			<div class="loginHere" id="loginForm">
@@ -177,14 +176,10 @@
 							<input type="text" id="notes" placeholder="Notes">
 						</li>
 						<li>
-							<label for="drawer-title">Create New Drawer</label>
-							<input type="text" id="drawer-title" placeholder="Drawer Title">
-						</li>
-						<li>
-							<label for="new-drawer-title">Add To Drawer</label>
-							<select name="current-drawer-titles" class="new-drawer-title">
-								<!-- <option value=`${drawerTitle}`>Drawer 1</option>
-								<option value=`${drawerTitle}`>Drawer 2</option> -->
+							<label for="drawer-title">Add To Drawer</label>
+							<select name="current-drawer-titles" id="drawer-title" class="drawer-title">
+										<!-- <option value=`${drawerTitle}`>Drawer 1</option>
+										<option value=`${drawerTitle}`>Drawer 2</option> -->
 							</select>
 						</li>
 						<li>
@@ -199,83 +194,45 @@
 			</div>
 		</div>
 	</section>
+	<section role="region">
+		<div id="deleteoverlay">
+			<div class="delete" id="deleteForm">
+				<form>
+					<ul class="flex-outer">
+						<p class="form-title">Are you sure?</p>
+						<li>
+							<label for="delete-name" id="delete-name">This action can not be undone.</label>
+						</li>
+						<li>
+							<button id="delete-overlaybutton" type="submit" onclick="deleteOff()">Delete Forever</button>
+						</li>
+					</ul>
+				</form>
+			</div>
+		</div>
+	</section>
+	<section role="region">
+		<div id="draweroverlay">
+			<div class="addDrawer" id="addDrawerForm">
+				<form class="drawer-age-form">
+					<ul class="flex-outer">
+						<p class="form-title">Create Drawer</p>
+						<li>
+						<label for="drawer-name">Drawer Name</label>
+						<input type="text" id="new-drawer-title" class="new-drawer-title" placeholder="Drawer Name">
+						</li>
+						<li>
+						<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
+						</li>
+					</ul>
+				</form>
+			</div>
+		</div>
+	</section>
 	<main role="main">
 		<div class="tab dropdown-asset"></div>
 		<div id="assetDropdown" class="dropdown-editAsset"></div>
-		<div id="Drawer1" class="assettabcontent">
-			<section role="region">
-				<div id="edit-assetoverlay">
-					<div class="editAsset" id="editAssetForm">
-						<form>
-							<ul class="flex-outer">
-								<p class="form-title">Update Connected Image</p>
-								<li>
-									<label for="title">Title</label>
-									<input type="text" id="title" placeholder="Title">
-								</li>
-								<li>
-									<label for="date-uploaded">Upload Date</label>
-									<input type="text" id="date-uploaded" placeholder="mm/dd/yyyy">
-								</li>
-								<li>
-									<label for="notes">Notes</label>
-									<input type="text" id="notes" placeholder="Notes">
-								</li>
-								<li>
-									<label for="new-drawer-title">Add To Drawer</label>
-									<select name="current-drawer-titles" class="new-drawer-title">
-										<!-- <option value=`${drawerTitle}`>Drawer 1</option>
-										<option value=`${drawerTitle}`>Drawer 2</option> -->
-									</select>
-								</li>
-								<li>
-									<label for="image-url">Image URL</label>
-									<input type="text" id="image-url" placeholder="http://imageurl.jpg">
-								</li>
-								<li>
-								<button id="edit-assetoverlaybutton" type="submit" onclick="editAssetOff()">Update</button>
-								</li>
-							</ul>
-						</form>
-					</div>
-				</div>
-			</section>
-			<section role="region">
-				<div id="deleteoverlay">
-					<div class="delete" id="deleteForm">
-						<form>
-							<ul class="flex-outer">
-								<p class="form-title">Are you sure?</p>
-								<li>
-									<label for="delete-name" id="delete-name">This action can not be undone.</label>
-								</li>
-								<li>
-									<button id="delete-overlaybutton" type="submit" onclick="deleteOff()">Delete Forever</button>
-								</li>
-							</ul>
-						</form>
-					</div>
-				</div>
-			</section>
-			<section role="region">
-				<div id="draweroverlay">
-					<div class="addDrawer" id="addDrawerForm">
-						<form class="drawer-age-form">
-							<ul class="flex-outer">
-								<p class="form-title">Create Drawer</p>
-								<li>
-									<label for="drawer-name">Drawer Name</label>
-									<input type="text" id="new-drawer-title" placeholder="Drawer Name">
-								</li>
-								<li>
-									<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
-								</li>
-							</ul>
-						</form>
-					</div>
-				</div>
-			</section>
-		</div>
+		<div id="Drawer1" class="assettabcontent"></div>
 	</main>
 </body>
 </html>
